--- a/erpnext/erpnext_integrations/doctype/woocommerce_settings/woocommerce_settings.json
+++ b/erpnext/erpnext_integrations/doctype/woocommerce_settings/woocommerce_settings.json
@@ -1,4 +1,5 @@
 {
+ "actions": [],
  "creation": "2018-02-12 15:10:05.495713",
  "doctype": "DocType",
  "editable_grid": 1,
@@ -12,7 +13,7 @@
   "api_consumer_key",
   "api_consumer_secret",
   "sb_accounting_details",
-  "tax_account",
+  "discount_account",
   "column_break_10",
   "f_n_f_account",
   "defaults_section",
@@ -69,13 +70,6 @@
    "fieldname": "sb_accounting_details",
    "fieldtype": "Section Break",
    "label": "Accounting Details"
-  },
-  {
-   "fieldname": "tax_account",
-   "fieldtype": "Link",
-   "label": "Tax Account",
-   "options": "Account",
-   "reqd": 1
   },
   {
    "fieldname": "column_break_10",
@@ -149,10 +143,17 @@
    "fieldname": "delivery_after_days",
    "fieldtype": "Int",
    "label": "Delivery After (Days)"
+  },
+  {
+   "fieldname": "discount_account",
+   "fieldtype": "Link",
+   "label": "Discount Account",
+   "options": "Account"
   }
  ],
  "issingle": 1,
- "modified": "2019-11-04 00:45:21.232096",
+ "links": [],
+ "modified": "2022-11-21 13:47:26.540874",
  "modified_by": "Administrator",
  "module": "ERPNext Integrations",
  "name": "Woocommerce Settings",
@@ -171,5 +172,6 @@
  "quick_entry": 1,
  "sort_field": "modified",
  "sort_order": "DESC",
+ "states": [],
  "track_changes": 1
 }
